fix: add environment variables

--- a/.env
+++ b/.env
@@ -1,4 +1,13 @@
+#Server Port
 SERVER_PORT=3000
+
+#MongoDB    
 MONGO_URI=mongodb+srv://ms159236:similar-udemy@similar-udemy.bckomqv.mongodb.net/?retryWrites=true&w=majority
+
+#JWT Parameters
 JWT_SECRET=jwtsecret
 JWT_LIFETIME=1h
+
+#Admin Credentials
+ADMIN_EMAIL=admin@admin.com
+ADMIN_PASSWORD=admin123
